2008-02-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcombobox.c (gtk_combo_box_cell_layout_add_attribute):
	g_return_if_fail() is the cell is not part of the combo instead of
	crashing in the next line.

2008-02-01  Cody Russell  <cody@jhu.edu>

	* modules/engines/ms-windows/xp_theme.[ch]
	* modules/engines/ms-windows/xp_theme_defs.h
	* modules/engines/ms-windows/msw_rc_style.c
	* modules/engines/ms-windows/msw_theme_main.c
	* modules/engines/ms-windows/msw_style.c: Re-indented and generally
	attempted to stylize more like the rest of the gtk+ stack's code.

2008-02-01  Michael Natterer  <mitch@imendio.com>

	* tests/testgtk.c: initialize GdkColor structs to fix warning
	about uninitialized "pixel" member.

	* tests/testactions.c: connect the toolbar_style() callback so it
	does something useful and doesn't warn about being defined but not
	used.

2008-01-31  Cody Russell  <bratsche@gnome.org>

	* gdk/win32/gdkevents-win32.c:
	Refactored some of the window hiding/showing code from
	WM_ACTIVATE to WM_SIZE and WM_SYSCOMMAND.  Having this
	under WM_ACTIVATE was causing the application to go into
	a weird state when the user right-clicked on the taskbar
	entry of a window that was minimized.  (#505928)
	
2008-01-31  Cody Russell  <bratsche@gnome.org>

	* gtk/gtkpaned.c (gtk_paned_set_position):
	Change queue_resize() to queue_draw(), and add a check for
	child2 != NULL in case someone calls this before there is
	a child packed in there.  (#144269 again)

2008-01-31  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkimage-directfb.c (_gdk_directfb_copy_to_image):
	applied patch from Denis Oliver Kropp <dok@directfb.org>.

2008-01-31  Sven Neumann  <sven@gimp.org>

	* gdk/directfb/gdkdisplay-directfb.c
	* gdk/directfb/gdkdrawable-directfb.c
	* gdk/directfb/gdkprivate-directfb.h
	* gdk/directfb/gdkwindow-directfb.c: applied patch from Denis
	Oliver Kropp <dok@directfb.org>. Fixes remaining warnings.

2008-01-31  Richard Hult  <richard@imendio.com>
