@@ -1,3 +1,12 @@
+2008-02-05  Cody Russell  <bratsche@gnome.org>
+
+	* gdk/win32/gdkprivate-win32.h
+	* gdk/win32/gdkevents-win32.c
+	* gdk/win32/gdkwindow-win32.c
+	* gdk/win32/gdkwindow-win32.h
+	* gdk/win32/gdkwin32.h:
+	Modal window rework.  (#455627 and #511111)
+
 2008-02-04  Michael Natterer  <mitch@imendio.com>
 
 	* gtk/gtkcombobox.c (gtk_combo_box_cell_layout_add_attribute):
